@@ -184,10 +184,6 @@
 		</dependency>
 	</dependencies>
 
-	<!-- this was an attampt to get jpl from the local prolog installation avoiding 
-		version mismatches: <dependencyManagement> <dependencies> <dependency> <artifactId>jpl</artifactId> 
-		<groupId>jpl</groupId> <scope>system</scope> <systemPath>${env.SWI_HOME_DIR}/lib/jpl.jar</systemPath> 
-		</dependency> </dependencies> </dependencyManagement> -->
 	<repositories>
 		<repository>
 			<id>sti2-archiva-external</id>
@@ -211,6 +207,18 @@
 	</repositories>
 
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine><![CDATA[-Djava.security.manager -Djava.security.policy=src/test/resources/proactive.java.policy]]></argLine>
+					<!-- Run unit tests in single JVM and do not reuse; otherwise Prolog JNI (JPL) causes problems :stuehmer -->
+					<forkCount>1</forkCount>
+					<reuseForks>false</reuseForks>
+				</configuration>
+			</plugin>
+		</plugins>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -222,10 +230,6 @@
 			</resource>
 			<resource>
 				<directory>src/main/adl</directory>
-				<filtering>false</filtering>
-			</resource>
-			<resource>
-				<directory>src/test/resources/historical-data</directory>
 				<filtering>false</filtering>
 			</resource>
 		</resources>
